<resources>
    <string name="app_name">Chaze</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_ecommerce">Ecommerce</string>
    <string name="title_food">Food</string>
    <string name="title_wishlist">Wish list</string>
    <string name="title_purchases">Purchases</string>
    <string name="title_more">More</string>
</resources>
