<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_ecommerce" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_food" />

    <item
        android:id="@+id/navigation_3"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_wishlist" />
    <item
        android:id="@+id/navigation_4"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_purchases" />

    <item
        android:id="@+id/navigation_5"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_more" />

</menu>
